[tool.poetry]
name = "yee-cli"
version = "0.1.1"
description = "Simple Yeelight Room control CLI written in Python."
authors = ["Adam Wojtczak <adam1edinburgh@gmail.com>"]
license = "MIT"
readme = "README.rst"
keywords = ["yee-cli"]
repository = "https://github.com/adamwojt/yee-cli"
packages = [
    { include = "yee", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/adamwojt/yee-cli/issues"
"Source" = "https://github.com/adamwojt/yee-cli"
"Documentation" = "https://github.com/adamwojt/yee-cli"

[tool.poetry.dependencies]
python = "^3.6"
Click = "^7.0"
yeelight = "^0.5.4"
webcolors = "^1.11.1"

[tool.poetry.dev-dependencies]
pip = "^19.2.3"
wheel = "^0.33.6"
pytest = "^4.6.5"
pytest-runner = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
[tool.poetry.plugins."console_scripts"]
"yee" = "yee.cli:main"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
